[package]
name = "http-headers"
version = "0.1.0"
edition = "2021"
description = "Show HTTP headers as received by this app on Shuttle.rs"
homepage = "https://http-headers.shuttleapp.rs"
repository = "https://github.com/peter-kehl/http-headers.shuttleapp.rs"
keywords = ["async", "cloud", "cloud-native", "shuttle", "shuttle-service"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.23", features = ["full"] }
shuttle-runtime = "0.24.0"
shuttle-tower = "0.24.0"
tower = { version = "0.4.13", features = ["full"] }
tokio = "1.26.0"
